k8s/application/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabinolabs
  namespace: sabino-labs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sabinolabs
      version: "v1"
  template:
    metadata:
      labels:
        app: sabinolabs
        version: "v1"
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - sabinolabs
                topologyKey: kubernetes.io/hostname
              weight: 100
      containers:
        - name: sabinolabs-app
          image: sabinolabs
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"
          ports:
            - name: http
              containerPort: 5004
          readinessProbe:
            httpGet:
              path: /management/health/readiness
              port: http
            initialDelaySeconds: 20
            periodSeconds: 15
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /management/health/liveness
              port: http
            initialDelaySeconds: 120
