k8s/application/service.yml
apiVersion: v1
kind: Service
metadata:
  name: sabinolabs
  namespace: sabino-labs
  labels:
    app: sabinolabs
spec:
  selector:
    app: sabinolabs
  ports:
    - name: http
      port: 5004
